# pdf-inspector

./: .gitignore  Cargo.toml  README.md  pdf_inspector.pyi  pyproject.toml
.github/workflows/: build-wheels.yml  publish.yml  python-publish.yml
napi/: README.md  package.json
src/: lib.rs  python.rs
src/extractor/: content_stream.rs  xobjects.rs
src/tables/: detect_rects.rs
tests/: integration_tests.rs
